--- a/course-nc/3-advanced/code/reactivity/2-todo-list-with-states/index.html
+++ b/course-nc/3-advanced/code/reactivity/2-todo-list-with-states/index.html
@@ -7,17 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>DOM MANIPULATION</h2>
+    <h2>UI STATE</h2>
     <h4>TODO LIST</h4>
 
     <form action="" id="todo-form">
         <label for="todo-item">Todo List</label>
         <input type="text" name="todo-item" id="todo-item" placeholder="Task to be">
-        <input type="button" value="Add">
+        <input type="submit" value="Add">
     </form>
     <div>
         <h5>Task List</h5>
         <ul id="todo-list"></ul>
     </div>
+
+    <script type="text/javascript" src="./todo-list.js"></script>
 </body>
 </html>
